@@ -3602,20 +3602,32 @@ register_check_parameters(
     subgroup_storage,
     "volume_groups",
     _("Volume Groups (LVM)"),
-    Alternative(
-        title = _("Levels for volume group"),
-        show_alternative_title = True,
-        default_value = (80.0, 90.0),
-        match = match_dual_level_type,
+    Dictionary(
         elements = [
-            get_free_used_dynamic_valuespec("used", "volume group"),
-            get_free_used_dynamic_valuespec("free", "volume group", default_value = (20.0, 10.0)),
-         ]
+             ("levels",
+            Alternative(
+                title = _("Levels for volume group"),
+                show_alternative_title = True,
+                default_value = (80.0, 90.0),
+                match = match_dual_level_type,
+                elements = [
+                    get_free_used_dynamic_valuespec("used", "volume group"),
+                    Transform(
+                             get_free_used_dynamic_valuespec("free", "volume group", default_value = (20.0, 10.0)),
+                             title = _("Levels for volume group free space"),
+                             allow_empty = False,
+                             forth = transform_filesystem_free,
+                             back  = transform_filesystem_free
+                    )
+                 ]
+            )),
+       ],
+    optional_keys = False
     ),
     TextAscii(
         title = _("Volume Group"),
         allow_empty = False),
-    "first"
+    "dict"
 )
 
 register_check_parameters(
